# trix

./: Cargo.toml  README.md
crates/helix-loader/src/: config.rs
crates/helix-term/src/: application.rs  commands.rs  compositor.rs
crates/helix-term/src/keymap/: default.rs
crates/helix-term/src/ui/: editor.rs  explore.rs  explorer.rs  mod.rs  overlay.rs  prompt.rs  test.rs  tree.rs
crates/helix-view/src/: editor.rs  graphics.rs  theme.rs
tools/xtask/: Cargo.toml
