[workspace]
resolver = "2"
members = [
  "crates/helix-core",
  "crates/helix-view",
  "crates/helix-term",
  "crates/helix-tui",
  "crates/helix-lsp-types",
  "crates/helix-lsp",
  "crates/helix-event",
  "crates/helix-dap",
  "crates/helix-loader",
  "crates/helix-vcs",
  "crates/helix-parsec",
  "crates/helix-stdx",
  "tools/xtask",
]

default-members = [
  "crates/helix-term"
]

[profile.release]
lto = "thin"
# debug = true

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
# strip = "debuginfo" # TODO: or strip = true
opt-level = 3

[profile.integration]
inherits = "test"
package.helix-core.opt-level = 2
package.helix-tui.opt-level = 2
package.helix-term.opt-level = 2

[workspace.dependencies]
tree-sitter = { version = "0.22" }
nucleo = "0.5.0"
slotmap = "1.0.7"
thiserror = "2.0"

[workspace.package]
version = "24.7.0"
edition = "2021"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
categories = ["editor"]
repository = "https://github.com/helix-editor/helix"
homepage = "https://helix-editor.com"
license = "MPL-2.0"
rust-version = "1.76"
