[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helix-term = { path = "../../crates/helix-term" }
helix-core = { path = "../../crates/helix-core" }
helix-view = { path = "../../crates/helix-view" }
helix-loader = { path = "../../crates/helix-loader" }
toml = "0.8"
